--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -8,7 +8,7 @@ body {
 	line-height: 1;
 	font-size: 14px;
 
-  @apply bg-white dark:bg-slate-950 text-slate-950 dark:text-white;
+  @apply bg-white dark:bg-zinc-950 text-zinc-950 dark:text-white;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
